--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -58,6 +58,7 @@ search:
   label: '搜索'
 tools:
   categories:
+    common tool: '常用工具'
     favorite-tools: '我的收藏'
     crypto: '加密'
     converter: '转换器'
@@ -69,6 +70,7 @@ tools:
     measurement: '测量'
     text: '文本'
     data: '数据'
+    
 
   password-strength-analyser:
     title: 密码强度分析仪
