--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -389,3 +389,7 @@ tools:
   text-to-binary:
     title: 文本到 ASCII 二进制
     description: 将文本转换为其 ASCII 二进制表示形式，反之亦然。
+
+  idcard-generator:
+    title: 身份证号生成
+    description: 可根据地区和出生年月生成随机身份证号
